templates/stateful-app/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: <APP_NAME>
  labels:
    app.kubernetes.io/name: <APP_NAME>
