templates/stateful-app/05-service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: <APP_NAME>-service
  namespace: <APP_NAME>
  labels:
    app.kubernetes.io/name: <APP_NAME>
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: <APP_NAME>
  ports:
  - name: http
    port: 80
    targetPort: <CONTAINER_PORT>
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <APP_NAME>-ingress
  namespace: <APP_NAME>
  labels:
    app.kubernetes.io/name: <APP_NAME>
spec:
  rules:
  - host: <APP_NAME>.littlehomelab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: <APP_NAME>-service
            port:
              number: 80
